cmake_minimum_required(VERSION 3.14)
project(interactive_learn_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(interactive_learn_cpp task_4_3_2.cpp task_4_3_3.cpp task_4_3_4.cpp task_4_3_5.cpp task_4_3_6.cpp task_4_3_7.cpp task_4_3_8.cpp task_4_3_9.cpp task_4_3_10.cpp task_4_3_11.cpp task_4_3_12.cpp task_4_3_14.cpp task_4_3_15.cpp task_4_3_16.cpp)